# craft-util

./: .gitignore  BUILD  CMakeLists.txt  README.md  common.cpp  gen.txt  package.yaml
cmake/: ResolveCraftCmake.cmake  ResolveCraftRoot.cmake
cmake/flags/: debian_x64_gcc.cmake  osx_x64_clang.cmake
cmake/platform/: osx_x64_clang.cmake  win_x64_vc140.cmake
scripts/: osx_x64_clang.sh  win_x64_vc140.bat
src/: algorithms.hpp  all.h  common.h  cpu.cpp  cpu.h  ider.hpp  introspection.h  path.h  random.h  random.hpp  templates.h
src/concurrency/: SafeSet.hpp  SharedBuffer.hpp
src/util/: algorithms.hpp  all.h  argparse.hpp  basen.hpp  common.h  cpu.cpp  cpu.h  defines.h  exception.h  graph.hpp  introspection.h  iterators.hpp  path.cpp  path.h  path_posix.cpp  path_windows.cpp  platform_windows.h  profiler.cpp  profiler.h  profiler.hpp  random.cpp  random.h  shared_defines.h  signal.hpp  strings.hpp  templates.h
src/util/concurrency/: SafeQueue.hpp  SafeSet.hpp  SharedBuffer.hpp
src/util/datastructures/: nstate.hpp
src/util/fs/: fs.cpp  fs.hpp
src/util/net/: HttpServer.cpp  HttpServer.h  TcpServer.cpp  TcpServer.h  fetch.cpp  fetch.hpp  http.cpp  http.h
src/util/threading/: future.hpp  threading.h
src/util/values/: FloatValue.hpp  IdValue.hpp  IntValue.hpp
test/: graph.cpp  main.cpp  reflect.py
